# aapb-deploy

./: .gitignore  README.md  artifacthub-repo.yml  index.yaml  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docs.yml
0.1/: 404.html  index.html  sitemap.xml
0.1/about/: index.html
0.1/architecture/: index.html
0.1/guides/: index.html
0.1/ref/: index.html
0.1/search/: search_index.json
0.1/tutorials/: index.html
aapb/: .argocd-source-aapb-demo.yaml  cache.yml  cert-demo.yml  cert-production.yml  config.yml  deploy.yml  ingress-demo.yml  ingress-production.yml  ingress.yml  ingressroute.yml  jetty-pvc.yml  logs-pvc.yml  ratelimit.yml  service.yml  solr.yml
charts/aapb/: Chart.yaml  README.md  values.yaml
dev/: aapb-api.yaml  aapb-app.yaml  aapb-appset.yaml  aapb-deploy-appset.yaml  aapb-dev.yaml
docs/: README.md  index.md  mkdocs.yml  pyproject.toml
docs/about/: architecture.md  index.md
docs/assets/: GBH_Archives_rgb_color.eps
docs/docs/: .nav.yml  about.md  index.md
docs/docs/about/: architecture.md  index.md
docs/docs/architecture/: index.md
docs/docs/guides/: argo.md  docs.md  index.md
docs/docs/ref/: index.md
docs/docs/tutorials/: helm.md  index.md  quickstart.md  upgrade.md
docs/guides/: argo.md  elastic.md  helm.md  index.md
docs/tutorials/: quickstart.md  upgrade.md
latest/: 404.html  index.html  sitemap.xml
latest/about/: index.html
latest/guides/: index.html
latest/ref/: index.html
latest/search/: search_index.json
latest/tutorials/: index.html
locust/: locustfile.py
(+19 files in other folders)
